# ocapistaine

./: .env.example  .gitignore  .gitmodules  .python-version  CLAUDE.md  COLLABORATION_ADDENDUM.md  CONTRIBUTING.md  HOURS_TRACKING_TEMPLATE.md  LICENSE  LICENSE-ELv2  PLAN_QUESTIONS_TAB.md  QUICKSTART.md  README.md  WEBSOCKET_FIX.md  encode_hackathon.md  package-lock.json  pyproject.toml  simple_scrape.py
.claude/agents/: contributor-tracker.md  project-management-auditor.md
.streamlit/: config.toml  secrets.toml.example
app/: auth.py  front.py  i18n.py  main.py  sidebar.py  sidebar_ocapistaine.py  view_ocapistaine.py
app/agents/: __init__.py  base.py
app/architecture/: README.md
app/auto_contribution/: __init__.py  views.py
app/data/: redis_client.py
app/logging/: __init__.py  config.py  domains.py
app/mockup/: __init__.py  batch_view.py  dataset.py  field_input.py  generator.py  levenshtein.py  llm_mutations.py  storage.py
app/models/: user.py
app/processors/: __init__.py  crawl_processor.py  mockup_processor.py
app/prompts/: __init__.py  constants.py  opik_sync.py  optimizer.py  registry.py
app/providers/: __init__.py  base.py  claude.py  config.py  gemini.py  logging.py  mistral.py  ollama.py
app/services/: __init__.py
app/translations/: en.json  fr.json
charterAgent/: charter_agent.py  validate_repo.py
concept/: balzac.md  tariqkrim.md
data/jeunesse/: pierrelelec.md
data/numerique/: README.md  senior.md
docs/: FIRECRAWL_GUIDE.md
docs.legacy/: HOURS_TRACKING_TEMPLATE.md  QUICKSTART.md
docs.legacy/methods/: TRIZ_METHODOLOGY.md
docs/ideas/: lesruches.md  readme.md
docs/workflows/: CONSOLIDATION.md
examples/: README.md  simple_scrape.py
ext_data/: README.md  extracted_pdf_metadata.json
ext_data/commission_controle/: extracted_pdf_metadata.json  www.audierne.bzh_systeme_documentheque__documents_category_49.md  www.audierne.bzh_systeme_documentheque__documents_category_49_metadata.json
ext_data/mairie_arretes/: crawl_metadata_20260118_144409.json  crawl_metadata_20260118_215017.json  crawl_metadata_20260118_233028.json  (+107 more)
persona/: ocapistaine_FR.md
scripts/: run_streamlit.sh  set_streamlit_env.py  start.sh  start_ngrok.py  verify_cors.py
src/: __init__.py  config.py  crawl_municipal_docs.py  download_pdfs.py  extract_pdf_urls.py  extract_text_from_pdfs.py  firecrawl_utils.py  ocr_pdfs.py  scrape_municipal_council_deliberations.py  structure_documents.py
tests/: test_autocontribution_integration.py  test_contribution_assistant.py
(+30 files in other folders)
