[tool.poetry]
name = "ocapistaine"
version = "0.1.0"
package-mode = false
description = "AI agent for Ò Capistaine civictech platform"
authors = ["Johnny Xmas <jeannoel.schilling@gmail.com>",
           "Vic < >",
           "Guru < >",
           ]
license = "Elastic License 2.0 (ELv2)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pydantic = ">=2.10.7,<3.0.0"
firecrawl = ">=4.12.0,<5.0.0"
firecrawl-tools = ">=0.1.1,<1.0.0"
ollama = ">=0.2.6,<1.0.0"
markdown2 = ">=2.4.8,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
PyPDF = "^6.5.0"
Tabula-py = "^2.10.0"
pdf2ocr = "^1.0.19"
opik = ">=1.9.0,<2.0.0"
requests = ">=2.31.0,<3.0.0"
streamlit = "^1.53.0"
fastapi = "^0.128.0"
redis = "^7.1.0"
uvicorn = "^0.40.0"
watchdog = "^6.0.0"
pydantic-settings = "^2.12.0"
google-genai = "^1.59.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
]
